# OverlayEngine

./: .gitignore  CMakeLists.txt  README.md  settings.gradle
src/: main.cpp  openxr_program.cpp  openxr_program.h
src/main/: AndroidManifest.xml
src/platform/android/: android_main.cpp  android_native_app_glue.c
